--- a/recipe/recipe.css
+++ b/recipe/recipe.css
@@ -31,6 +31,7 @@ h1 {
     background-color: #f0f0f0;
     color: #A4A400 ;
     font-family: Lucida Sans Unicode, Helvetica, Arial, sans-serif;
+    text-decoration: underline;
     
   
 
