--- a/w1d6Animation/ascii.css
+++ b/w1d6Animation/ascii.css
@@ -46,3 +46,9 @@ select{
     right:0px;
     position: fixed;
 }
+img{
+    width: 50px;
+    height: 20px;
+    margin-right: 20px;
+    margin-bottom: 5px;
+}
